--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "chalk": "^2.1.0",
+    "ora": "^1.3.0",
+    "prettyjson": "^1.2.1",
     "yargs": "^8.0.2"
   }
 }
