--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "we_cli",
-  "version": "0.0.3",
+  "name": "we-cli",
+  "version": "0.0.4",
   "description": "a project template build tool",
   "main": "index.js",
   "repository": "git@github.com:ygtzz/we_cli.git",
