--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "we-cli",
+  "name": "we_cli",
   "version": "0.0.4",
   "description": "a project template build tool",
   "main": "index.js",
