--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "inquirer": "^3.2.2",
     "ora": "^1.3.0",
     "prettyjson": "^1.2.1",
-    "yargs": "^8.0.2"
+    "yargs": "^13.2.4",
+    "yargs-parser": "^13.1.1"
   }
 }
